[tool.poetry]
name = "mcbiomes"
version = "1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.4"
Pillow = "^8.4.0"
java-random = {url = "https://github.com/MostAwesomeDude/java-random/archive/refs/heads/master.zip"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
